--- a/posts/citations/mojo_citations.bib
+++ b/posts/citations/mojo_citations.bib
@@ -59,4 +59,38 @@
   year = {2024},
   howpublished = {\url{https://en.wikipedia.org/wiki/Dot_product}},
 }
-
+@misc{thakur_convolutions,
+  author = {Ayush Thakur},
+  title = {Intuitive Understanding of 1D, 2D, and 3D Convolutions in Convolutional Neural Networks},
+  year = {2020},
+  url = {https://wandb.ai/ayush-thakur/dl-question-bank/reports/Intuitive-understanding-of-1D-2D-and-3D-convolutions-in-convolutional-neural-networks---VmlldzoxOTk2MDA},
+  note = {A report on convolution operations in deep neural networks.}
+}
+@misc{nvidiapragmaunroll,
+  author = {NVIDIA},
+  title = {{\#pragma unroll Compiler Directive (CUDA C Programming Guide)}},
+  year = {2025},
+  url = {https://docs.nvidia.com/cuda/cuda-c-programming-guide/index.html?highlight=unroll#pragma-unroll},
+  note = {Reference for the \#pragma unroll compiler directive in CUDA}
+}
+@misc{mojoparameter,
+  author = {Modular},
+  title = {Parametric closure (\texttt{@parameter}) in Mojo},
+  year = {2025},
+  url = {https://docs.modular.com/mojo/manual/decorators/parameter/#parametric-closure},
+  note = {Official documentation for parametric closures using @parameter in Mojo}
+}
+@misc{mojo_lifetimes,
+  author = {Modular},
+  title = {Lifetimes in Mojo},
+  year = {2025},
+  url = {https://docs.modular.com/mojo/manual/values/lifetimes/},
+  note = {Official documentation for value lifetimes and the origin system in Mojo}
+}
+@misc{zero_cost_abstractions,
+  author = {saoirse},
+  title = {Zero Cost Abstractions},
+  year = {2019},
+  url = {https://without.boats/blog/zero-cost-abstractions/},
+  note = {Blog post discussing the meaning and implications of zero-cost abstractions}
+}
