--- a/posts/citations/mojo_citations.bib
+++ b/posts/citations/mojo_citations.bib
@@ -94,3 +94,10 @@
   url = {https://without.boats/blog/zero-cost-abstractions/},
   note = {Blog post discussing the meaning and implications of zero-cost abstractions}
 }
+@misc{iitd_parallel_convolution,
+  author = {Rijurekha Sen},
+  title = {Parallel Convolution},
+  year = {2022},
+  url = {https://www.cse.iitd.ac.in/~rijurekha/col730_2022/parallelconvolution_aug29.pdf},
+  note = {Lecture notes on parallel convolution, COL730, IIT Delhi}
+}
