--- a/posts/2025-06-02-mojo-gpu-puzzles.qmd
+++ b/posts/2025-06-02-mojo-gpu-puzzles.qmd
@@ -623,13 +623,16 @@ Similar to the previous puzzles, we can implement the dot-product by copying dat
 
 To implement dot product efficiently on a GPU, we will use **parallel reduction**. This is a classic pattern for aggregating values (sum, min, max, etc.) across a large array using many threads. The general flow is:
 
-- Each thread computes a partial sum of the dot product (multiplying its assigned elements from `a` and `b`).
-- All threads store their partial results in shared memory.
-- In each reduction step:
-  - The number of active threads is halved.
-  - Each active thread adds its value to the value from another thread (usually its "neighbor" at a fixed offset).
-  - A barrier ensures all threads have updated shared memory before the next step.
-- This repeats for log₂(n) steps, until only one thread holds the final result.
+Picture Zeno’s “half-way” paradox [@zeno_dichotomy_paradox]: you keep halving the leftover distance until you’re done. A parallel reduction does the same—each round halves the number of active threads instead of the distance.
+
+![](mojo_gpu_puzzles/zeno_paradox.png)
+
+- Every thread multiplies its assigned `a` and `b` elements and writes the partial product into shared memory.
+- Each reduction round:
+  - The active-thread count is cut in half (`stride /= 2`).
+  - Each surviving thread adds its value to the partner `stride` positions away.
+  - A `barrier()` guarantees all writes land before the next “half-step.”
+- After log₂ (n) halvings, Zeno’s finish line is crossed—thread 0 alone holds the final dot-product.
 
 This pattern is fast, highly parallel, and used everywhere in GPU programming for reductions (sum, min, max, etc).
 
@@ -952,7 +955,7 @@ After step 4 every thread sees:
           main slice              halo
     [ … local_i … TPB − 1 | TPB … TPB+CONV₂−2 ]
 
-The code to perform the actual computation is the same as in [Puzzle 10](#puzzle-10).
+**The** code to perform the actual computation is the same as in [Puzzle 10](#puzzle-10).
 
 One barrier, no branches and 100 % shared-memory hits ensure our kernel is fast and efficient!
 
