--- a/posts/citations/mojo_citations.bib
+++ b/posts/citations/mojo_citations.bib
@@ -101,3 +101,9 @@
   url = {https://www.cse.iitd.ac.in/~rijurekha/col730_2022/parallelconvolution_aug29.pdf},
   note = {Lecture notes on parallel convolution, COL730, IIT Delhi}
 }
+@misc{zeno_dichotomy_paradox,
+  author = {Wikipedia},
+  title = {Zeno's Paradoxes — Dichotomy paradox},
+  year = {2024},
+  howpublished = {\url{https://en.wikipedia.org/wiki/Zeno%27s_paradoxes#Dichotomy_paradox}},
+}
