--- a/posts/citations/mojo_citations.bib
+++ b/posts/citations/mojo_citations.bib
@@ -107,3 +107,13 @@
   year = {2024},
   howpublished = {\url{https://en.wikipedia.org/wiki/Zeno%27s_paradoxes#Dichotomy_paradox}},
 }
+
+@inproceedings{blelloch_prefix_sum,
+  author = {Guy E. Blelloch},
+  title = {Prefix Sums and Their Applications},
+  booktitle = {Synthesis of Parallel Algorithms},
+  year = {1993},
+  pages = {35--60},
+  url = {https://www.cs.cmu.edu/~guyb/papers/Ble93.pdf},
+  note = {Seminal work introducing the all-prefix-sums (scan) operation and its parallel algorithms.}
+}
