--- a/posts/2025-06-02-mojo-gpu-puzzles.qmd
+++ b/posts/2025-06-02-mojo-gpu-puzzles.qmd
@@ -1,5 +1,6 @@
 ---
 title: "GPUs go brrr with Mojo"
+lightbox: true
 draft: true
 toc: true
 bibliography: citations/mojo_citations.bib
@@ -1180,6 +1181,8 @@ fn prefix_sum_simple[
 
 ```bash
 pixi run p12 --simple
+# out: HostBuffer([0.0, 1.0, 3.0, 6.0, 10.0, 15.0, 21.0, 28.0])
+# expected: HostBuffer([0.0, 1.0, 3.0, 6.0, 10.0, 15.0, 21.0, 28.0])
 ```
 
 Each of the log₂(n) rounds does up to n parallel additions (one per active element), so total work is $\sum_k n = nlog(n)$.
@@ -1187,18 +1190,30 @@ Because rounds are serialized by barriers, the longest dependency chain is one a
 
 #### Blelloch’s Two‐Pass Algorithm
 
-Blelloch’s variant achieves Θ(n) work by splitting the scan into an **up-sweep** and a **down-sweep** [@blelloch_prefix_sum]:
+Blelloch’s two-pass scan does Θ(n) work by splitting the job into an **up-sweep** (build a reduction tree) and a **down-sweep** (propagate prefixes) [@blelloch_prefix_sum].
+
+Why prefer it over the classic Hillis–Steele (Algorithm 1)?
+
+1. Hardware reality.  
+   Hillis–Steele assumes one processor per element and updates the array *in-place* every round.  
+   A real GPU doesn’t grant that luxury: a “1 024-thread” block actually runs in 32-thread warps that time-slice on the same SM. When warp 0 pauses and warp 1 resumes, in-place writes from one warp can overwrite data the other still needs.
+
+2. Synchronisation cost.  
+   Avoiding the overwrite requires a barrier after **every** addition—log₂(n) rounds × n threads ⇒ Θ(n log n) operations plus all those barriers.
+
+3. Blelloch’s fix.  
+   • Up-sweep and down-sweep touch disjoint tree levels, so threads never trample each other within a phase.  
+   • Only two global barriers are needed (one between the phases, one at the end).  
+   • Work drops to Θ(n) and correctness is guaranteed even when the array is far larger than a warp.
+
+The result is a scan that is both faster and safer on modern GPUs.
 
 1. **Up-sweep (reduce)**  
-   We build a reduction tree by summing pairs of elements in log₂(n) rounds. At each round, threads work on chunks of size `2*step`:
-
-   For `step = 1; step < n; step *= 2`:  
-     For `i` in `0, 2*step, 4*step, …, n-1`:  
-       `a[i + 2*step - 1] = a[i + step - 1] ⊕ a[i + 2*step - 1]`
-
-   - **step=1**: sum adjacent pairs → partial sums at indices 1, 3, 5, …  
-   - **step=2**: combine 4-element blocks, accumulating into indices 3, 7, …  
-   - Continue until **step = n/2**; now `a[n-1]` holds the overall reduction.  
+   - Build a binary reduction tree over log₂(n) rounds:
+     - Round 1 (step=1): sum each adjacent pair, storing results at indices 1, 3, 5, …
+     - Round 2 (step=2): merge those partial sums into blocks of 4, writing into indices 3, 7, 11, …
+     - Continue doubling the span each round until step = n/2
+   - After the final round, a[n-1] holds the overall total
 
    ![](mojo_gpu_puzzles/p12_up.gif)
    *Up-Sweep: combining elements in a binary-tree fashion—build partial sums until the final element holds the total.*  
@@ -1206,30 +1221,20 @@ Blelloch’s variant achieves Θ(n) work by splitting the scan into an **up-swee
 2. **Down-sweep (propagate)**  
    After the up-sweep leaves `a[n-1]` containing the overall sum, we walk the tree top-down to scatter prefix sums into every slot:
 
-   - Initialize `step = n/2`.  
-   - Repeat while `step >= 1`:
-     - For each `i` in `0, 2*step, 4*step, …, n-1`:
-       ```
-       t                   = a[i + step - 1]        # save left subtree total
-       a[i + step - 1]     = a[i + 2*step - 1]      # overwrite left with right subtotal
-       a[i + 2*step - 1]   = t ⊕ a[i + 2*step - 1]  # combine for right‐child prefix
-       ```
-     - `barrier()` to sync threads  
-     - `step //= 2`
-
-   In each round, partial sums flow down one level of the binary tree. After log₂(n) rounds, every index holds the sum of all elements before it.  
+   - Initialize the down-sweep with a window size of `step = n/2`.  
+   - Loop as long as `step >= 1`:  
+     - Partition the array into blocks of size `2*step`. For each block starting at index `i`:  
+       • Temporarily store the left-child total from `a[i + step - 1]`.  
+       • Overwrite that left slot with the right-child subtotal from `a[i + 2*step - 1]`.  
+       • Add the saved left-child total to the right slot, giving the correct prefix for that subtree.  
+     - Issue a `barrier()` so all threads sync before shrinking the window.  
+     - Halve the window: `step = step / 2`.  
+   - With each pass, the partial sums trickle down one level of the binary tree; after log₂(n) iterations every element holds its exclusive prefix sum.  
 
    ![](mojo_gpu_puzzles/p12_down.gif){fig-align="center"}  
    *Down Sweep: siblings swap and accumulate, driving the scan from root back to leaves.*  
 
 Time Complexity: Θ(log₂ n) parallel steps, Work: Θ(n) total operations.
-
-We coalesce-load the input into shared memory, then execute the Blelloch scan in two synchronized phases:
-
-1. Up-sweep (reduce) – in log₂ n rounds each thread builds partial sums into a binary tree.
-2. barrier() – sync all threads and reset the root to zero (for an exclusive scan).
-3. Down-sweep (propagate) – in log₂ n rounds threads walk the tree top-down, scattering prefix sums.
-4. Coalesced write – flush the computed prefixes from shared memory back to global memory.
 
 <details open>
 <summary> **Solution (Blelloch up-sweep + down-sweep)** </summary>
@@ -1238,52 +1243,137 @@ We coalesce-load the input into shared memory, then execute the Blelloch scan in
 fn prefix_sum_blelloch[
     layout: Layout
 ](
-    out:   LayoutTensor[mut=True, dtype, layout],
+    output:   LayoutTensor[mut=True, dtype, layout],
     a:     LayoutTensor[mut=False, dtype, layout],
     size:  Int,
 ):
-    let global_idx = block_idx.x*block_dim.x + thread_idx.x
-    let local_idx = thread_idx.x
+    global_idx = block_idx.x*block_dim.x + thread_idx.x
+    local_idx = thread_idx.x
     shared = tb[dtype]().row_major[SIZE]().shared().alloc()
 
-    // load
     if global_idx < size:
         shared[local_idx] = a[global_idx]
     barrier()
 
-    // Up-sweep (reduce)
+    # Up-sweep
     var stride = 1
     while stride < size:
-        let step = stride * 2
-        if (local_idx % step == step - 1) && (local_idx < size):
+        step = stride * 2
+        if (local_idx % step == step - 1) and (local_idx < size):
             shared[local_idx] += shared[local_idx - stride]
         barrier()
         stride = step
 
-    // Down-sweep (propagate)
+    # Down-sweep
     if local_idx == size - 1:
         shared[local_idx] = 0
     barrier()
 
     var half = stride >> 1
     while half > 0:
-        let step = half * 2
-        if (local_idx % step == step - 1) && (local_idx < size):
-            let t = shared[local_idx - half]
+        step = half * 2
+        if (local_idx % step == step - 1) and (local_idx < size):
+            t = shared[local_idx - half]
             shared[local_idx - half] = shared[local_idx]
             shared[local_idx] += t
         barrier()
         half = half >> 1
 
-    // write
     if global_idx < size:
-        out[global_idx] = shared[local_idx]
+        output[global_idx] = shared[local_idx] + a[global_idx]
 ```
 
 ```bash
 pixi run p12 --blelloch
+# out: HostBuffer([0.0, 1.0, 3.0, 6.0, 10.0, 15.0, 21.0, 28.0])
+# expected: HostBuffer([0.0, 1.0, 3.0, 6.0, 10.0, 15.0, 21.0, 28.0])
 ```
 
+</details>
+
+This is not the most efficient implementation, but I hope this provides some intuition about the algorithm! 
+
+#### Complete Version
+
+The key difference in this version is that now we have an input array that is larger than the size of a single block.
+
+We split the global scan into two bite-sized passes:
+
+**Phase 1 – Local Scan**
+1. Each block copies its slice into shared memory.  
+2. Perform an in-block naive scan/Blelloch scan exactly as in the single-block case.  
+3. The last thread of the block stashes the block’s total **after** the scan into an auxiliary slot at the tail of `output`:  
+
+   ```
+   #  |<---  SIZE_2  --->|<-- #blocks -->|
+   #  [   prefix sums   ][ block totals ]
+   ```  
+
+   The picture shows each block (blue) plus its “summary cell” (orange).
+
+**Phase 2 – propagate block totals**
+
+1. Every thread grabs the aggregate from the *previous* block  
+   (`totals[block_id-1]`) and adds it to its own prefix.  
+   One read, one add—done.  
+   Now every element holds the inclusive scan over the *whole* array.
+
+![](mojo_gpu_puzzles/p12_block_boundary.png){p12_block_boundary}
+
+We launch the above phases as two separate kernels.
+
+A host-side synchronisation sits between the launches. That call flushes the work queue and waits until Phase 1 has fully committed its writes to global memory, ensuring the per-block totals are complete and visible before Phase 2 starts consuming them.  Skip the sync and the driver is free to overlap or reorder the kernels, letting Phase 2 read garbage.
+
+<details open>
+<summary> **Solution (Block Boundary Version)** </summary>
+```{.mojo filename="p12_block_boundary.mojo"}
+fn prefix_sum_local_phase[
+    out_layout: Layout, in_layout: Layout
+](
+    output: LayoutTensor[mut=False, dtype, out_layout],
+    a: LayoutTensor[mut=False, dtype, in_layout],
+    size: Int,
+):
+    global_i = block_dim.x * block_idx.x + thread_idx.x
+    local_i = thread_idx.x
+    shared = tb[dtype]().row_major[EXTENDED_SIZE]().shared().alloc()
+
+    if global_i < SIZE_2:
+        shared[local_i] = a[global_i]
+    
+    barrier()
+    offset = 1
+
+    for idx in range(Int(log2(Scalar[dtype](TPB)))):
+        if local_i >= offset and local_i < SIZE_2:
+            shared[local_i] += shared[local_i - offset]
+
+        barrier()
+        offset *= 2
+
+    if global_i < SIZE_2:
+        output[global_i] = shared[local_i]
+    
+    if local_i == TPB - 1:
+        output[size + block_idx.x] += shared[local_i]
+
+
+# Kernel 2: Add block sums to their respective blocks
+fn prefix_sum_block_sum_phase[
+    layout: Layout
+](output: LayoutTensor[mut=False, dtype, layout], size: Int):
+    global_i = block_dim.x * block_idx.x + thread_idx.x
+    # FILL ME IN (roughly 3 lines)
+    if block_idx.x > 0 and global_i < size:
+        prev_block_sum = output[SIZE_2 + block_idx.x - 1]
+        output[global_i] += prev_block_sum
+```
+
+```bash
+pixi run p12
+# out: HostBuffer([0.0, 1.0, 3.0, 6.0, 10.0, 15.0, 21.0, 28.0, 36.0, 45.0, 55.0, 66.0, 78.0, 91.0, 105.0, 28.0, 77.0]) # last 2 elements are the block sums
+# expected: HostBuffer([0.0, 1.0, 3.0, 6.0, 10.0, 15.0, 21.0, 28.0, 36.0, 45.0, 55.0, 66.0, 78.0, 91.0, 105.0])
+```
 </details>
 
 ## Citation
